@@ -1,38 +1,0 @@
-<form method="post" name="auth">
-
-<div id="std_table">
-<h2>{"Configurations of all nodes of the"|_} {$hotspot_network_name} {"network"|_}</h2>
-<table>
-<thead>
-<tr>
-    <th >{"Id"|_}</th>
-    <th >{"Name"|_}</th>
-    <th >{"Opened on"|_}</th>
-    <th >{"Action"|_}</th>
-</tr>
-</thead>
-
-{section name=node loop=$nodes}
-<tr>
-    <td>{$nodes[node].node_id}</td>
-    <td>{$nodes[node].name}</td>
-    <td>{$nodes[node].creation_date}</td>
-    <td>
-        <a href="{$smarty.const.BASE_SSL_PATH}admin/hotspot.php?node_id={$nodes[node].node_id}&action=edit_node"><input type="button" value="{"Edit"|_}"></a>&nbsp;
-        <a href="{$smarty.const.BASE_SSL_PATH}admin/hotspot_owner.php?node_id={$nodes[node].node_id}"><input type="button" value="{"Owner"|_}"></a>&nbsp;
-        <a href="{$smarty.const.BASE_SSL_PATH}admin/hotspot.php?node_id={$nodes[node].node_id}&action=del_node"><input type="button" value="{"Delete"|_}" onclick="javascript: return confirm('Are you sure you want to delete {$nodes[node].name} ?');"></a>
-    </td>
-</tr>
-{/section}
-
-<tr>
-    <td colspan="4">
-      &nbsp;<a href="{$smarty.const.BASE_SSL_PATH}admin/hotspot.php?node_id=new&action=add_node"><input type="button" value="{"Add a new node"|_}"></a>
-    </td>
-</tr>
-</table>
-</div>
-
-</form>
-
-<p class="warning">{$error_message}</p>
