@@ -1,76 +1,0 @@
-<h3>{$title} {$hotspot_network_name}</h3>
-
-<b style="position: absolute;top: 10px;right: 10px;">({$user_id})</b> <!-- DEBUG -->
-
-<form method="post" name="auth">
-
-<div id="std_table">
-<table> <!-- Refaire le formattage sans la table -->
-  <tr>
-    <td class="item">{"ID"|_}:</td>
-<!-- Tmp work around to disable the hotspot ID -->
-    <td>
-    {if $node_info}
-    <input type="text" value="{$node_id}" disabled><input type="hidden" name="new_node_id" value="{$node_info.node_id}">
-    {else}
-    <input type="text" name="new_node_id" value="{$node_info.node_id}">&nbsp;{* $javascript *}
-    {/if}
-    </td>
-  </tr>
-  <tr>
-    <td class="item">{"Name"|_}:</td>
-    <td><input type="text" name="name" value="{$node_info.name}"></td>
-  </tr>
-  <tr>
-    <td class="item">{"RSS URL"|_}:</td>
-    <td><input type="text" name="rss_url" value="{$node_info.rss_url}" size="50"></td>
-  </tr>
-  <tr>
-    <td class="item">{"Homepage URL"|_}:</td>
-    <td><input type="text" name="home_page_url" value="{$node_info.home_page_url}" size="50"></td>
-  </tr>
-  <tr>
-    <td class="item">{"Description"|_}:</td>
-    <td><input type="text" name="description" value="{$node_info.description}" size="50"></td>
-  </tr>
-  <tr>
-    <td class="item">{"Map URL"|_}:</td>
-    <td><input type="text" name="map_url" value="{$node_info.map_url}" size="50"></td>
-  </tr>
-  <tr>
-    <td class="item">{"Street address"|_}:</td>
-    <td><input type="text" name="street_address" value="{$node_info.street_address}" size="50"></td>
-  </tr>
-  <tr>
-    <td class="item">{"Public phone number"|_}:</td>
-    <td><input type="text" name="public_phone_number" value="{$node_info.public_phone_number}"></td>
-  </tr>
-  <tr>
-    <td class="item">{"Public email"|_}:</td>
-    <td><input type="text" name="public_email" value="{$node_info.public_email}" size="50"></td>
-  </tr>
-  <tr>
-    <td class="item">{"Mass transit info"|_}:</td>
-    <td><input type="text" name="mass_transit_info" value="{$node_info.mass_transit_info}" size="50"></td>
-  </tr>
-  <tr>
-    <td class="item">{"Node deployment status"|_}:</td>
-    <td>
-    <select name="node_deployment_status">
-    {html_options values=$all_deployment_status output=$all_deployment_status selected=$node_deployment_status}
-    </select>
-    </td>
-  </tr>
-</table>
-<br>
-{if !$node_info}
-<input type="hidden" name="action" value="add_new_node">
-<input type="submit" value="{"Add new node"|_}">
-{else}
-<input type="hidden" name="action" value="update_node">
-<input type="submit" value="{"Update node"|_}">
-{/if}
-<p>Work in progress note: Better DB integrity testing is needed before allowing the hotspot ID modification.</p>
-</div>
-</form>
-
