@@ -1,70 +1,0 @@
-<h3>{$title} {$hotspot_network_name}</h3>
-<script LANGUAGE="JavaScript">
-
-{literal}
-function validateUsers() {
-{/literal}
-  user_id_array = new Array("{$user_id_array}");
-{literal}
-  if (document.auth.owner_user_id.value == "") {
-    alert('Valid user id is needed');
-    return false;
-  }
-    
-  for (i = 0; i < user_id_array.length; i++) {
-    if (user_id_array[i] == document.auth.owner_user_id.value) {
-      alert('The user id "' + document.auth.owner_user_id.value + '" is already a owner');
-        return false;
-    }
-  }
-  document.auth.action.value='add_owner';
-  return true;
-}
-</script>
-{/literal}
-
-<form method="post" name="auth">
-<input type="hidden" name="action" value="">
-<input type="hidden" name="node_id" value="{$node_id}">
-  <div id="std_table">
-  <table>
-    <thead>
-    <tr>
-      <th>{"Administrators"|_}</th>
-      <th>{"Action"|_}</th>
-    </tr>
-    </thead>
-
-{section name=owner loop=$owner_list}
-    <tr>
-      <td>{$owner_list[owner].user_id}</td>
-      <td><a href="{$smarty.const.BASE_SSL_PATH}admin/hotspot_owner.php?node_id={$node_id}&owner_user_id={$owner_list[owner].user_id}&action=del_owner"><input type="button" value="Delete" onclick="javascript: return confirm('Are you sure you want to delete {$owner_list[owner].user_id} ?');"></a></td>
-    </tr>
-{/section}
-
-  </table>
-  </div>
-  <br>
-  
-  <div id="std_table">
-  <table>
-  <thead>
-    <tr>
-      <th colspan="3">{"Give a user rights to administer this node"|_}</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="item">{"User ID"|_}:</td>
-      <td><input type="text" name="owner_user_id"></td>
-      <td><input type="submit" value="{"Add"|_}" onclick="return validateUsers();"></td>
-    </tr>
-  </tbody>
-  </table>
-  </div>
-
-<div class="warning">
-<p>{$error_message}</p>
-</div>
-
-</form>
