@@ -1,35 +1,0 @@
-<form method='post' name='auth'>
-
-<table id="node_list">
-<thead>
-<tr >
-    <th  colspan=6>{"Configurations of all nodes of the"|_} {$hotspot_network_name} {"network"|_}</th> 
-</tr>
-<tr >
-    <th >{"Id"|_}</th>
-    <th >{"Name"|_}</th>
-    <th >{"Action"|_}</th>
-</tr>
-</thead>
-
-{section name=node loop=$node_list}
-    <tr>
-      <td>
-        {$node_list[node].node_id}
-      </td>
-      <td>
-        {$node_list[node].name}
-      </td>
-      <td>
-        <a href='{$smarty.const.BASE_SSL_PATH}admin/owner_sendfiles.php?node_id={$node_list[node].node_id}&action=uploadform'><input type='button' value='Upload Files' /></a>
-      </td>
-    </tr>
-{/section}
-</table>
-
-    <input type="hidden" name="action" value="">
-    <input type="hidden" name="node_id" value="{$nodes[node].node_id}">
-
-<p class="warning">{$error_message}</p>
-
-</form>
