@@ -1,47 +1,0 @@
-<B style="position: absolute;top: 10px;right: 10px;">({$user_id})</B> <!-- DEBUG -->
-
-<SCRIPT LANGUAGE="JavaScript">
-{literal}
-function ConfirmDeleteFile(filename) {
-  document.auth.delfile.value = filename; 
-  if(confirm('Are you sure you want to delete ' + filename + ' ?')) {
-    document.auth.submit();
-  }
-  else{
-    document.auth.delfile.value='';
-  }
-}
-{/literal}
-</SCRIPT>
-
-<form enctype="multipart/form-data" method="POST" name="auth">
-
-<input type="hidden" name="delfile" />
-<input type="hidden" name="MAX_FILE_SIZE" value="30000" />
-
-<table id="node_list">
-<thead>
-  <tr><th colspan="6">Configurations of all nodes of the {$hotspot_network_name} network</th></tr>
-  <tr>
-    <th >Filename</th>
-    <th >Action</th>
-  </tr>
-{section name=file loop=$file_list}
-  <tr>
-  {if $file_list[file].file_exists == 1}
-    <td ><a href="{$smarty.const.BASE_URL_PATH}{$smarty.const.LOCAL_CONTENT_REL_PATH}{$node_id}/{$file_list[file].filename}">{$file_list[file].filename}</a></td>
-    <td ><input type="button" value="Delete" onclick="ConfirmDeleteFile('{$file_list[file].filename}');" /></td>
-  {else}
-    <td ><input type="file" name="{$file_list[file].filename}" /></td>
-    <td >{$file_list[file].filename}</td>
-  {/if}
-  </tr>
-{/section}
-
-</table>
-<input type="hidden" value="{$node_id}" />
-<p><input type="submit" value="Submit" onclick="document.auth.delfile.value='submit';" />
-
-<p class="warning">{$error_message}</p>
-
-</form>
